<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:layout_height="match_parent"
    tools:context=".activity.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/verifemail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/verif_email"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEmailApp"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/open_email_app"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            />

        <TextView
            android:id="@+id/textLoginV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/login"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            />

    </LinearLayout>

</ScrollView>