<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottom_sheet"
    android:orientation="vertical">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="15dp"
    android:text="@string/profile"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="18sp"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="53dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_history"
            android:tint="@color/black"
            />

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:padding="15dp"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >


        <Button
            android:id="@+id/buttonSignOutB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_navigation_bar"
            android:backgroundTint="@color/purple_700"
            android:text="@string/sign_out"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        
    </LinearLayout>

</LinearLayout>